hphp/test/zend/bad/ext/spl/tests/SplFixedArray_count_checkParams.php
<?php
$ar = new SplFixedArray(3);
$ar[0] = 1;
$ar[1] = 2;
$ar[2] = 3;

echo $ar->count(3);
?>